fabric/testdata/out/ing_sugarcane-get-api-commodity-groups-id-admins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e enableAccessLog(2, 4, 5) -\u003e
      unverifiedAuditLog(\"https://identity.zalando.com/managed-id\") -\u003e oauthTokeninfoAllScope(\"uid\")
      -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\", \"uid\",
      \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(5) \u0026\u0026
      Path(\"/api/commodity-groups/:id\") \u0026\u0026 Method(\"GET\") \u0026\u0026
      JWTPayloadAllKV(\"https://identity.zalando.com/realm\", \"users\") \u0026\u0026
      JWTPayloadAnyKV(\"https://identity.zalando.com/managed-id\", \"aalexandre\",
      \"https://identity.zalando.com/managed-id\", \"gcarta\", \"https://identity.zalando.com/managed-id\",
      \"kanli\", \"https://identity.zalando.com/managed-id\", \"bmooney\", \"https://identity.zalando.com/managed-id\",
      \"egalligan\", \"https://identity.zalando.com/managed-id\", \"dagordon\", \"https://identity.zalando.com/managed-id\",
      \"rlagarferrei\", \"https://identity.zalando.com/managed-id\", \"brcullen\",
      \"https://identity.zalando.com/managed-id\", \"msung\", \"https://identity.zalando.com/managed-id\",
      \"ralmeida\", \"https://identity.zalando.com/managed-id\", \"aortega\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"034b420d-673b-11e9-8daa-02b5f12a6be8","deployment-id":"d-ccbr8yx3m7q8jqmamix8fuc5m","pipeline-id":"l-6yn1sv8ryxtz4pzezhuwwcjc8"},"name":"sugarcane-get-api-commodity-groups-id-admins","namespace":"default"},"spec":{"rules":[{"host":"sugarcane.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"sugarcane","servicePort":"http"},"pathType":"ImplementationSpecific"}]}},{"host":"spp-commodity-gro [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> enableAccessLog(2, 4, 5) -> unverifiedAuditLog("https://identity.zalando.com/managed-id")
      -> oauthTokeninfoAllScope("uid") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(5) && Path("/api/commodity-groups/:id")
      && Method("GET") && JWTPayloadAllKV("https://identity.zalando.com/realm", "users")
      && JWTPayloadAnyKV("https://identity.zalando.com/managed-id", "aalexandre",
      "https://identity.zalando.com/managed-id", "gcarta", "https://identity.zalando.com/managed-id",
      "kanli", "https://identity.zalando.com/managed-id", "bmooney", "https://identity.zalando.com/managed-id",
      "egalligan", "https://identity.zalando.com/managed-id", "dagordon", "https://identity.zalando.com/managed-id",
      "rlagarferrei", "https://identity.zalando.com/managed-id", "brcullen", "https://identity.zalando.com/managed-id",
      "msung", "https://identity.zalando.com/managed-id", "ralmeida", "https://identity.zalando.com/managed-id",
      "aortega") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2019-06-21T10:14:03Z"
  generation: 1
  labels:
    controller-uid: 034b420d-673b-11e9-8daa-02b5f12a6be8
    deployment-id: d-ccbr8yx3m7q8jqmamix8fuc5m
    pipeline-id: l-6yn1sv8ryxtz4pzezhuwwcjc8
  name: sugarcane-get-api-commodity-groups-id-admins
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: sugarcane
    uid: 034b420d-673b-11e9-8daa-02b5f12a6be8
  resourceVersion: "1370351716"
  uid: 4bdd7033-940d-11e9-a3f0-065b20c8b844
spec:
  rules:
  - host: sugarcane.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: sugarcane
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-commodity-group-data-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: sugarcane
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
